Fix label on small screen

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 header {
     margin-top: 30px;
-    height: 450px;
+    height: 470px;
     color: var(--main-text-color);
 }
 
@@ -53,9 +53,11 @@ header {
 }
 
 .introduction-info-text {
-    margin: 0 auto;
     font-size: 12px;
     max-width: 400px;
+    text-align: justify;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 
@@ -73,7 +75,7 @@ main {
     text-align: center;
     padding-top: 50px;
     padding-bottom: 20px;
-    color: var(--main-background-colo);
+    color: var(--main-background-color);
 }
 
 .project-card {
@@ -122,6 +124,7 @@ main {
     border-width: 1.5px;
     padding: 5px;
     font-weight: 100;
+    cursor: context-menu;
 }
 
 .label-unity {
@@ -214,6 +217,10 @@ main {
     .header-about {
     padding-top: 0px;
     }
+    
+    .introduction-info-text {
+    margin: 0 auto;
+    }
 }
 
 @media screen and (max-width: 425px) {   
@@ -240,4 +247,11 @@ footer {
 .fa:hover {
     color: orange;
     transition: 0.2s;
+}
+
+/*-------------------*/
+
+.project-side-info {
+    text-align: justify;
+    margin: 50px;
 }
